@startuml mcd comics engineering

package comics_db {
    class Users {
        *id: id
        username: text
        email: text
        password: hash
        is_admin: boolean
        created_at: datetime
        modified_at: datetime
    }

    class IssueSeries {
        *id: id
        -added_by: id
        name: text
        desc: longtext
        vo_start: datetime
        vo_end: datetime
        created_at: datetime
        modified_at: datetime
    }

    class Issues {
        *id: id
        -series_id: id
        -added_by: id
        name: text
        number: number
        cover_date: datetime
        parution_date: datetime
        is_annual: boolean
        has_backup: boolean
        backup_name: text
        created_at: datetime
        modified_at: datetime
    }

    class Books {
        *id: id
        -series_id: id
        -added_by: id
        name: text
        desc: longtext
        number: number
        vo_content: longtext
        created_at: datetime
        modified_at: datetime
    }

    class Editions {
        *id: id
        -publisher_id: id
        -book_id: id
        -added_by: id
        isbn: text
        ean: text
        price: float
        url: text
        img_url: text
        cover_type: text
        parution_date: datetime
        created_at: datetime
        modified_at: datetime
    }
    note top: isbn and ean treated, no "-"

    class Series {
        *id: id
        -added_by: id
        name: text
        ongoing: boolean
        oneshot: boolean
        nvolumes: text
        vo_start: datetime
        vo_end: datetime
        created_at: datetime
        modified_at: datetime
    }
    note top: number can be null

    class Publishers {
        *id: id
        name: text
        created_at: datetime
        modified_at: datetime
    }
	
	class EditionOwnership {
        *id: id
        - *user_id: id
        - *edition_id: id
        read: boolean
        gift: boolean
        buy_price: float
        date: datetime
    }

    class Wishlist {
        - *user_id: id
        - *book_id: id
    }
    note top: composed pkey
    
    class UserSubmissions {
        *id: id
        - user_id: id
        - related_to: id
        submission_type: string
        submission_action: string
        submission_data: json
        note: string
        created_at: datetime
    }
    note bottom: submission_type and submission_action are enums

}

package comics_prices_db {
    class Book {
        *id: id
        retail_prices: [
            { source: text, price: float, date: datetime }
        ]
        second_hand_prices: [
            { source: text, price: float, date: datetime }
        ]
    }
}

IssueSeries "*" --> "1" Users

Issues "*" --> "1" IssueSeries
Issues "*" --> "1" Users 

Books "*" --> "*" Issues

EditionOwnership "*" --> "1" Editions
EditionOwnership "*" --> "1" Users

Wishlist "*" --> "1" comics_db.Books
Wishlist "*" --> "1" Users

Editions "*" --> "1" comics_db.Books
Editions "*" --> "1" Publishers
Editions "*" --> "1" Users

comics_db.Books "*" --> "1" Series
comics_db.Books "*" --> "1" Users
comics_db.Books ..> comics_prices_db.Book

comics_db.Series "*" --> "1" Users

UserSubmissions "*" --> "1" Users
UserSubmissions "*" --> "0..1" UserSubmissions

@enduml